--- a/less/homepage.less
+++ b/less/homepage.less
@@ -289,6 +289,16 @@ body.bHome.layoutMobile #contentwrap {
   }
 }
 
+@media screen and (device-width: 320px) {   // iPhone 4/5/SE
+  body.bHome #contentwrap {
+	section#featuredVR {
+	  article.graph.small {
+		width: 320px;
+	  }
+	}
+  }
+}
+
 body.bHome.layoutTablet #contentwrap header {
   height: 60px;
   nav {
